Setup initial HTML elements for Ninja Turtles characters

--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Sistemas y Tecnologías Web</title>
+        <title>Ninja Turtles </title>
     </head>
     <body>
-        
+        <div class="container">
+            <div class="turtle">
+                <div class="mask">
+                    <div class="eye left"></div>
+                    <div class="eye right"></div>
+                    <div class="mask-tie">
+                        <div class="triangle triangle-top"></div>
+                        <div class="triangle triangle-bottom"></div>
+                    </div>
+                </div>
+                <div class="nose"></div>
+                <div class="mouth"></div>
+                    <div class="teeth"></div>
+            </div>
+        </div>
     </body>
 </html>
