--- a/index.html
+++ b/index.html
@@ -35,6 +35,19 @@
             </div>
           </div>
 
-        
+          <div class="turtle">
+            <div class="mask">
+              <div class="eye left"></div>
+              <div class="eye right"></div>
+              <div class="mask-tie">
+                <div class="triangle triangle-top"></div>
+                <div class="triangle triangle-bottom"></div>
+              </div>
+            </div>
+            <div class="nose"></div>
+            <div class="mouth">
+              <div class="inner-mouth"></div>
+            </div>
+          </div>
     </body>
 </html>
