--- a/index.html
+++ b/index.html
@@ -49,5 +49,21 @@
               <div class="inner-mouth"></div>
             </div>
           </div>
+
+          <div class="turtle">
+            <div class="mask">
+              <div class="eye left"></div>
+              <div class="eye right"></div>
+              <div class="mask-tie">
+                <div class="triangle triangle-top"></div>
+                <div class="triangle triangle-bottom"></div>
+              </div>
+            </div>
+            <div class="nose"></div>
+            <div class="mouth">
+              <div class="teeth"></div>
+            </div>
+          </div>
+        </div>
     </body>
 </html>
