--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Ninja Turtles </title>
+        <title>Ninja Turtles</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="container">
@@ -15,55 +17,55 @@
                     </div>
                 </div>
                 <div class="nose"></div>
-                <div class="mouth"></div>
+                <div class="mouth">
                     <div class="teeth"></div>
+                </div>
             </div>
-        </div>
 
-        <div class="turtle">
-            <div class="mask">
-              <div class="eye left"></div>
-              <div class="eye right"></div>
-              <div class="mask-tie">
-                <div class="triangle triangle-top"></div>
-                <div class="triangle triangle-bottom"></div>
-              </div>
+            <div class="turtle">
+                <div class="mask">
+                    <div class="eye left"></div>
+                    <div class="eye right"></div>
+                    <div class="mask-tie">
+                        <div class="triangle triangle-top"></div>
+                        <div class="triangle triangle-bottom"></div>
+                    </div>
+                </div>
+                <div class="nose"></div>
+                <div class="mouth">
+                    <div class="inner-mouth"></div>
+                </div>
             </div>
-            <div class="nose"></div>
-            <div class="mouth">
-              <div class="inner-mouth"></div>
-            </div>
-          </div>
 
-          <div class="turtle">
-            <div class="mask">
-              <div class="eye left"></div>
-              <div class="eye right"></div>
-              <div class="mask-tie">
-                <div class="triangle triangle-top"></div>
-                <div class="triangle triangle-bottom"></div>
-              </div>
+            <div class="turtle">
+                <div class="mask">
+                    <div class="eye left"></div>
+                    <div class="eye right"></div>
+                    <div class="mask-tie">
+                        <div class="triangle triangle-top"></div>
+                        <div class="triangle triangle-bottom"></div>
+                    </div>
+                </div>
+                <div class="nose"></div>
+                <div class="mouth">
+                    <div class="inner-mouth"></div>
+                </div>
             </div>
-            <div class="nose"></div>
-            <div class="mouth">
-              <div class="inner-mouth"></div>
-            </div>
-          </div>
 
-          <div class="turtle">
-            <div class="mask">
-              <div class="eye left"></div>
-              <div class="eye right"></div>
-              <div class="mask-tie">
-                <div class="triangle triangle-top"></div>
-                <div class="triangle triangle-bottom"></div>
-              </div>
+            <div class="turtle">
+                <div class="mask">
+                    <div class="eye left"></div>
+                    <div class="eye right"></div>
+                    <div class="mask-tie">
+                        <div class="triangle triangle-top"></div>
+                        <div class="triangle triangle-bottom"></div>
+                    </div>
+                </div>
+                <div class="nose"></div>
+                <div class="mouth">
+                    <div class="teeth"></div>
+                </div>
             </div>
-            <div class="nose"></div>
-            <div class="mouth">
-              <div class="teeth"></div>
-            </div>
-          </div>
         </div>
     </body>
 </html>
